--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,7 +12,7 @@
 
     {{ partial "live.html" . }}
 
-    {{ partial "cta.html" . }}
+    {{ partial "cd.html" . }}
 
     {{ partial "video.html" . }}
 
