--- a/layouts/partials/hero-area.html
+++ b/layouts/partials/hero-area.html
@@ -4,11 +4,16 @@
     <div class="block">
             <div class="row" style="margin-right:0;margin-left: 0">
                 <div class="col-lg-12 media-aspect-wrapper">
-                    <!--<iframe frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" title="YouTube video player" width="640" height="360" src="https://www.youtube-nocookie.com/embed/CppiJUbC8BI?autoplay=1&amp;mute=1&amp;controls=0&amp;showinfo=0&amp;rel=0&amp;enablejsapi=1&amp;origin=https%3A%2F%2Fwww.jamiecullum.com&amp;widgetid=1" id="widget2"></iframe>-->
-                    <iframe frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" title="YouTube video player" width="640" height="360" src="https://www.youtube-nocookie.com/embed/6RSmITR8jAk?autoplay=1&amp;mute=1&amp;controls=2" id="widget2"></iframe>
+                    <iframe
+                        frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        title="YouTube video player" width="640" height="360"
+                        src="{{ .Site.Params.banner.youtubeURL }}?autoplay=1&amp;mute=1&amp;controls=2" id="widget2"
+                    ></iframe>
                 </div>
             </div>
     </div>
+</section>
+<section class="social-links">
     <div class="social-icon">
         <ul class="list-inline">
             {{ range .Site.Params.footer.socialIcon }}
@@ -17,6 +22,7 @@
         </ul>
     </div>
 </section>
+<!--old hero-area-->
 <!--<section class="hero-area" style='background-image: url("{{ .Site.Params.banner.bgImage | absURL }}");background-position: center'>-->
     <!--<div class="block">-->
        <!--{{with .Site.Params.banner.heading}} <h1>{{ . }}</h1>{{ end }}-->
