--- a/layouts/partials/hero-area.html
+++ b/layouts/partials/hero-area.html
@@ -1,6 +1,6 @@
 {{ if .Site.Params.banner.enable }}
 {{"<!-- Welcome Slider-->" | safeHTML}}
-<section class="video-container">
+<section class="hero-video">
     <div class="block">
             <div class="row" style="margin-right:0;margin-left: 0">
                 <div class="col-lg-12 media-aspect-wrapper">
@@ -14,12 +14,21 @@
     </div>
 </section>
 <section class="social-links">
-    <div class="social-icon">
-        <ul class="list-inline">
-            {{ range .Site.Params.footer.socialIcon }}
-            <li><a href="{{ .url }}" target="_blank"><i class="{{ .icon }}"></i></a></li>
-            {{ end }}
-        </ul>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3 text-center">
+                <div class="social-icon">
+                    <h3>
+                        Follow and subscribe<br>to know the latest news!
+                    </h3>
+                    <ul class="list-inline">
+                        {{ range .Site.Params.footer.socialIcon }}
+                        <li><a href="{{ .url }}" target="_blank"><i class="{{ .icon }}"></i></a></li>
+                        {{ end }}
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 <!--old hero-area-->
