--- a/layouts/partials/hero-area.html
+++ b/layouts/partials/hero-area.html
@@ -16,17 +16,13 @@
 <section class="social-links">
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-md-offset-3 text-center">
+            <div class="col-md-8 col-md-offset-2 text-center">
                 <div class="social-icon">
                     <h3>
                         Follow and subscribe<br>to know the latest news!
                     </h3>
-                    <ul class="list-inline">
-                        {{ range .Site.Params.footer.socialIcon }}
-                        <li><a href="{{ .url }}" target="_blank"><i class="{{ .icon }}"></i></a></li>
-                        {{ end }}
-                    </ul>
-                </div>
+                    {{ partial "social-icons.html" . }}
+               </div>
             </div>
         </div>
     </div>
