--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1631,7 +1631,7 @@ a:hover {
 
 .social-icon ul li {
   margin-bottom: 4px;
-  padding: 0 7px;
+  padding: 0 12px;
 }
 
 .social-icon ul li:hover a {
@@ -1643,7 +1643,8 @@ a:hover {
   transform: none;
 }
 
-.social-icon ul li:hover a i {
+.social-icon ul li:hover a i,
+.social-icon ul li:hover a svg  {
   color: #fff;
   opacity: 1;
   filter: alpha(opacity=100);
@@ -1670,14 +1671,9 @@ a:hover {
   color: #48b4d1;
 }
 
-@media (max-width: 768px) {
-  .social-icon ul li a {
-    width: 55px;
-    height: 55px;
-  }
-}
-
-.social-icon ul li a i {
+.social-icon ul li a i,
+.social-icon ul li a svg {
+  height: 70px;
   color: #55606a;
   display: inline-block;
   font-size: 32px;
@@ -1692,6 +1688,19 @@ a:hover {
   /*transition: all 400ms ease-out 0s;*/
   transition: none;
 }
+.social-icon ul li a svg {
+  font-size: 40px;
+}
+
+@media (max-width: 768px) {
+  .social-icon ul li a {
+    width: 55px;
+    height: 55px;
+  }
+  .social-icon ul li a svg {
+    height: 55px;
+  }
+}
 .social-links h3 {
   color: #fff;
   margin-bottom: 3rem;
@@ -1705,10 +1714,12 @@ a:hover {
 .social-links .social-icon h3 {
   margin-top: 0;
 }
-.social-links .social-icon ul li a i{
+.social-links .social-icon ul li a i,
+.social-links .social-icon ul li a svg {
   color: #48b4d1;
 }
-.social-links .social-icon ul li:hover a i{
+.social-links .social-icon ul li:hover a i,
+.social-links .social-icon ul li:hover a svg {
   color: #fff;
 }
 
@@ -1716,6 +1727,9 @@ a:hover {
   .social-icon ul li a i {
     line-height: 55px;
     font-size: 25px;
+  }
+  .social-icon ul li a svg {
+    font-size: 35px;
   }
 }
 
@@ -2224,6 +2238,7 @@ a:hover {
 .nav>li>a {
   padding: 20px 15px;
 }
+
 @media (max-width: 480px) {
   .navigation {
     height: 60px;
@@ -2314,6 +2329,11 @@ a:hover {
   }
 }
 
+@media (max-width: 408px){
+  .social-icon ul li {
+    margin-top: 24px;
+  }
+}
 
 .post-single-section > .container > .row .row {
     margin-bottom: 20px;
@@ -2326,4 +2346,7 @@ a:hover {
   vertical-align: top;
   letter-spacing: 1px;
   line-height: 1.8em;
+}
+.icomoon-soundcloud {
+  background: url('https://api.iconify.design/icomoon-free:soundcloud.svg') no-repeat center center / contain;
 }
