--- a/layouts/partials/skill.html
+++ b/layouts/partials/skill.html
@@ -1,4 +1,5 @@
-{{ if .Site.Data.skill.enable }}
+{{ $data := index .Site.Data .Site.Language.Lang }}
+{{ if $data.skill.enable }}
 {{"<!-- Skills -->" | safeHTML }}
 <section id="team-skills" class="parallax-section section section-bg overly">
     <div class="container">
@@ -6,7 +7,7 @@
             {{"<!-- section title -->" | safeHTML }}
             <div class="col-md-12">
                 <div class="title text-center">
-                    <h2>{{ with .Site.Data.skill.heading}} {{ . }} {{ end }} <span class="color">{{ with .Site.Data.skill.headingSpan }} {{ . }} {{ end }}</span></h2>
+                    <h2>{{ with $data.skill.heading}} {{ . }} {{ end }} <span class="color">{{ with $data.skill.headingSpan }} {{ . }} {{ end }}</span></h2>
                     <div class="border"></div>
                 </div>
             </div>
@@ -14,13 +15,13 @@
         </div>
         <div class="row">
             <div class="col-md-6">
-                {{ with .Site.Data.skill.title }} <h2> {{ . }} </h2> {{ end }}
-                {{ with .Site.Data.skill.content }} <p> {{ . }} </p> {{ end }}
-                <img class="img-responsive" src="{{ .Site.Data.skill.image | absURL }}" alt="image">
+                {{ with $data.skill.title }} <h2> {{ . }} </h2> {{ end }}
+                {{ with $data.skill.content }} <p> {{ . }} </p> {{ end }}
+                <img class="img-responsive" src="{{ $data.skill.image | absURL }}" alt="image">
             </div>
             <div class="col-md-6">
                 <ul class="skill-bar">
-                    {{ range .Site.Data.skill.skillItem }}
+                    {{ range $data.skill.skillItem }}
                     <li>
                         <p><span>{{ .itemNumber }}</span>{{ .itemName }}</p>
                         <div class="progress">
