--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -1,4 +1,5 @@
-{{ if .Site.Data.contact.enable }}
+{{ $data := index .Site.Data .Site.Language.Lang }}
+{{ if $data.contact.enable }}
 {{"<!-- Srart Contact Us -->" | safeHTML}}
 <section id="contact" class="contact-us section-bg">
     <div class="container">
@@ -6,17 +7,17 @@
 
             {{"<!-- section title -->" | safeHTML}}
             <div class="title text-center wow fadeIn" data-wow-duration="500ms">
-                <h2>{{ with .Site.Data.contact.heading }} {{ . }} {{ end }} <span class="color">{{ with .Site.Data.contact.headingSpan }} {{ . }} {{ end }}</span></h2>
+                <h2>{{ with $data.contact.heading }} {{ . }} {{ end }} <span class="color">{{ with $data.contact.headingSpan }} {{ . }} {{ end }}</span></h2>
                 <div class="border"></div>
             </div>
             {{"<!-- /section title -->" | safeHTML}}
 
             {{"<!-- Contact Details -->" | safeHTML}}
             <div class="contact-info col-md-6 col-md-offset-3 text-center wow fadeInIn" data-wow-duration="500ms">
-                <!--{{ with .Site.Data.contact.title }}<h3>{{ . }}</h3> {{ end }}-->
-                <!--{{ with .Site.Data.contact.content }} <p> {{ . }} </p> {{ end }}-->
+                <!--{{ with $data.contact.title }}<h3>{{ . }}</h3> {{ end }}-->
+                <!--{{ with $data.contact.content }} <p> {{ . }} </p> {{ end }}-->
                 <!--<div class="contact-details">-->
-                    {{ range .Site.Data.contact.contactDetails }}
+                    {{ range $data.contact.contactDetails }}
                     <div>
                         <i class="{{ .icon }}" style="font-size:40px;"></i>
                         <h3>{{ .info }}</h3>
@@ -63,11 +64,11 @@
         </div>
     </div>
 
-    {{ if .Site.Data.contact.enable_maps }}
+    {{ if $data.contact.enable_maps }}
     {{"<!-- Google Map -->" | safeHTML}}
     <div class="google-map">
-        <div id="map-canvas" {{ with .Site.Data.contact.mapLatitude }} data-latitude="{{ . }}" {{ end }} 
-        {{ with .Site.Data.contact.mapLongitude }} data-longitude="{{ . }}" {{ end }}></div>
+        <div id="map-canvas" {{ with $data.contact.mapLatitude }} data-latitude="{{ . }}" {{ end }} 
+        {{ with $data.contact.mapLongitude }} data-longitude="{{ . }}" {{ end }}></div>
     </div>
     {{ end }}
 
