--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -3,7 +3,8 @@
     <div class="container">
         <div class="navbar-header">
             {{"<!-- responsive nav button -->" | safeHTML}}
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+
+           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -18,18 +19,32 @@
                 <div class="pc-only">{{.Site.Params.subtitle}}</div>
             </a>
             {{"<!-- /logo -->" | safeHTML}}
+
+            {{if eq .Site.Language.Lang "ja"}}
+            <a class="navbar-lang" href="{{.Site.BaseURL}}/en">English</a>
+            {{ end }}
+            {{if eq .Site.Language.Lang "en"}}
+            <a class="navbar-lang" href="{{.Site.BaseURL}}">日本語</a>
+            {{ end }}
+
         </div>
 
         {{"<!-- main nav -->" | safeHTML}}
         {{ if .IsHome }}        
         <nav class="collapse navbar-collapse navbar-right" role="Navigation">
-                    <ul id="nav" class="nav navbar-nav navigation-menu">
-                        <li><a data-scroll href="#body">{{ with $.Site.Params.home }}{{ . }}{{ end }}</a></li>
-                        {{ range $.Site.Menus.nav }}
-                        <li><a data-scroll href="#{{ .URL }}">{{ .Name }}</a></li>
-                        {{ end }}
-                    </ul>
-                </nav>
+            <ul id="nav" class="nav navbar-nav navigation-menu">
+                <li><a data-scroll href="#body">{{ with $.Site.Params.home }}{{ . }}{{ end }}</a></li>
+                {{ range $.Site.Menus.nav }}
+                <li><a data-scroll href="#{{ .URL }}">{{ .Name }}</a></li>
+                {{ end }}
+                {{if eq .Site.Language.Lang "ja"}}
+                <li><a class="btn" href="{{.Site.BaseURL}}/en">English</a></li>
+                {{ end }}
+                {{if eq .Site.Language.Lang "en"}}
+                <li><a class="btn" href="{{.Site.BaseURL}}">日本語</a></li>
+                {{ end }}
+            </ul>
+        </nav>
         {{ else }}
         <nav class="collapse navbar-collapse navbar-right" role="Navigation">
                     <ul id="nav" class="nav navbar-nav navigation-menu">
