--- a/layouts/partials/portfolio.html
+++ b/layouts/partials/portfolio.html
@@ -1,4 +1,5 @@
-{{ if .Site.Data.portfolio.enable}}
+{{ $data := index .Site.Data .Site.Language.Lang }}
+{{ if $data.portfolio.enable}}
 {{"<!-- Portfolio Section -->" | safeHTML}}
 <section class="portfolio section" id="portfolio">
     <div class="container">
@@ -6,7 +7,7 @@
             <div class="col-lg-12">
                 {{"<!-- section title -->" | safeHTML}}
                 <div class="title text-center">
-                    <h2> {{ with .Site.Data.portfolio.heading }} {{ . }} {{ end }} <span class="color">{{ with .Site.Data.portfolio.headingSpan }} {{ . }} {{ end }}</span></h2>
+                    <h2> {{ with $data.portfolio.heading }} {{ . }} {{ end }} <span class="color">{{ with $data.portfolio.headingSpan }} {{ . }} {{ end }}</span></h2>
                     <div class="border"></div>
                 </div>
                 {{"<!-- /section title -->" | safeHTML}}
@@ -16,7 +17,7 @@
             <div class="col-md-12">
                 <div class="portfolio-filter">
                     <button type="button" data-filter="all">All</button>
-                    {{ range .Site.Data.portfolio.filterList }}
+                    {{ range $data.portfolio.filterList }}
                     <button type="button" data-filter=".{{ .filterType }}">{{ .filterTitle }}</button>
                     {{ end }}
                 </div>
@@ -24,7 +25,7 @@
         </div>
         <div class="row portfolio-items-wrapper">
             {{"<!-- portfolio item -->" | safeHTML}}
-            {{ range .Site.Data.portfolio.portfolioItem }}
+            {{ range $data.portfolio.portfolioItem }}
             <div class="mix col-md-4 {{ .types }}">
                 <div class="portfolio-block">
                     <img class="img-responsive" src="{{ .image | absURL}}" alt="work-image">
