--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -1,4 +1,5 @@
-{{ if .Site.Data.pricing.enable}}
+{{ $data := index .Site.Data .Site.Language.Lang }}
+{{ if $data.pricing.enable}}
 {{"<!-- Start Pricing section -->" | safeHTML}}
 <section id="pricing" class="pricing section">
     <div class="container">
@@ -6,12 +7,12 @@
 
             {{"<!-- section title -->" | safeHTML}}
             <div class="title text-center wow fadeInDown" data-wow-duration="500ms">
-                <h2>{{ with .Site.Data.pricing.heading }} {{ . }} {{ end }}<span class="color"> {{ with .Site.Data.pricing.headingSpan }} {{ . }} {{ end }}</span></h2>
+                <h2>{{ with $data.pricing.heading }} {{ . }} {{ end }}<span class="color"> {{ with $data.pricing.headingSpan }} {{ . }} {{ end }}</span></h2>
                 <div class="border"></div>
             </div>
             {{"<!-- /section title -->" | safeHTML}}
 
-            {{ range .Site.Data.pricing.pricingTable }}
+            {{ range $data.pricing.pricingTable }}
             {{"<!-- single pricing table -->" | safeHTML}}
             <div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp" data-wow-duration="200ms">
                 <div class="price-item">
