--- a/layouts/partials/testimonial.html
+++ b/layouts/partials/testimonial.html
@@ -1,12 +1,13 @@
-{{ if .Site.Data.testimonial.enable }}
+{{ $data := index .Site.Data .Site.Language.Lang }}
+{{ if $data.testimonial.enable }}
 {{"<!-- Start Testimonial -->" | safeHTML}}
-<section id="testimonial" class="testimonial overly section bg-2" style='background-image: url("{{ .Site.Data.testimonial.bgImage | absURL }}")'>
+<section id="testimonial" class="testimonial overly section bg-2" style='background-image: url("{{ $data.testimonial.bgImage | absURL }}")'>
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
                 {{"<!-- testimonial wrapper -->" | safeHTML}}
                 <div id="testimonials" class="wow fadeInUp" data-wow-duration="500ms" data-wow-delay="100ms">
-                    {{ range .Site.Data.testimonial.testimonialItem }}
+                    {{ range $data.testimonial.testimonialItem }}
                     {{"<!-- testimonial single -->" | safeHTML}}
                     <div class="item text-center">
 
