Fix bio image and social info.

--- a/layouts/pages/biography.html
+++ b/layouts/pages/biography.html
@@ -52,7 +52,7 @@
                     <div class="col-md-12">
                         <div class="member-photo">
                             {{"<!-- member photo -->" | safeHTML}}
-                            <img class="img-responsive" style="width: 100%" src="{{ .bgImage | absURL }}" alt="Meghna" style="float: left">
+                            <img class="img-responsive" style="width: 100%" src="{{ .image | absURL }}" alt="Meghna" style="float: left">
                         </div>
                     </div>
 
