--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -15,7 +15,7 @@
 
 					<p>&copy; <script>
 							document.write(new Date().getFullYear())
-						</script> Border-free Music All Rights Reserved. Mamoru Satoh All Rights Reserved.</p>
+						</script> Border-free Creations All Rights Reserved. Sora Satoh All Rights Reserved.</p>
 				</div>
 			</div>
 		</div>
